# language-guess

./: LICENSE  Paths_language_guess.hs  language-guess.cabal  php2hs.php
Language/: Guess.hs
