Name:                language-guess
Version:             0.1
Synopsis:            Guess at which language a text is written in, based on
                     the PEAR module Text_LanguageDetect.
License:             BSD3
License-file:        LICENSE
Author:              Christian Rødli Amble
Maintainer:          cra+code@cra.no
Category:            Language
Build-type:          Simple
Extra-Source-Files:  php2hs.php
Data-files:          lang.dat
Cabal-version:       >=1.2

flag ghc7

Library
  Exposed-modules:   Language.Guess
  
  Build-depends:     base -any, cereal ==0.3.*, bytestring ==0.9.*,
                     containers ==0.4.*
  if !flag(ghc7)
    Build-depends:   utilities-ht -any
  Extensions:        CPP
